[gd_scene load_steps=9 format=3 uid="uid://bh3fto1ck4yu4"]

[ext_resource type="Script" path="res://Dialogue/dialogue_box.gd" id="1_2kliw"]
[ext_resource type="Script" path="res://Dialogue/main.gd" id="1_3db8r"]
[ext_resource type="JSON" path="res://Dialogue/dialogue.json" id="2_0p7cx"]
[ext_resource type="Script" path="res://addons/ez_dialogue/ez_dialogue_node.gd" id="3_olshk"]
[ext_resource type="StyleBox" uid="uid://bdnnw1fifws4f" path="res://Dialogue/pressed_button.tres" id="4_v0cr4"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_ultm3"]
bg_color = Color(0.341176, 0.854902, 0.662745, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 6
border_color = Color(0.180392, 0.517647, 0.392157, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 2.0
expand_margin_bottom = 4.0
shadow_color = Color(0, 0.666667, 0.952941, 0.6)
shadow_size = 5

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_jci1s"]
bg_color = Color(0.341176, 0.854902, 0.662745, 1)
border_width_left = 1
border_width_top = 1
border_width_right = 1
border_width_bottom = 6
border_color = Color(0.180392, 0.517647, 0.392157, 1)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
expand_margin_top = 2.0
expand_margin_bottom = 4.0

[sub_resource type="Theme" id="Theme_mei5x"]
Button/styles/focus = SubResource("StyleBoxFlat_ultm3")
Button/styles/hover = SubResource("StyleBoxFlat_jci1s")
Button/styles/normal = SubResource("StyleBoxFlat_jci1s")
Button/styles/pressed = ExtResource("4_v0cr4")

[node name="Node2D" type="Node2D"]
script = ExtResource("1_3db8r")
dialogueJSON = ExtResource("2_0p7cx")

[node name="dialogue_box" type="Node2D" parent="."]
script = ExtResource("1_2kliw")

[node name="VBoxContainer" type="VBoxContainer" parent="dialogue_box"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 430.0
offset_top = 434.0
offset_right = 577.0
offset_bottom = 527.0
grow_horizontal = 2
grow_vertical = 0
theme = SubResource("Theme_mei5x")

[node name="Label" type="Label" parent="dialogue_box/VBoxContainer"]
layout_mode = 2

[node name="EzDialogue" type="Node" parent="."]
script = ExtResource("3_olshk")

[connection signal="custom_signal_received" from="EzDialogue" to="." method="_on_ez_dialogue_custom_signal_received"]
[connection signal="dialogue_generated" from="EzDialogue" to="." method="_on_ez_dialogue_dialogue_generated"]
[connection signal="end_of_dialogue_reached" from="EzDialogue" to="." method="_on_ez_dialogue_end_of_dialogue_reached"]
